--- a/css/main.css
+++ b/css/main.css
@@ -248,3 +248,17 @@ main {flex: 1;}
 .packages-main .costs {border-top:1px solid var(--c-gray);}
 .packages-main .up-to {color: var(--c-green);font-weight:bold;}
 .packages-main-more {background:var(--c-gray-light);text-align:center;padding:30px 0;}
+
+.guides {display:flex;gap:15px 1.3%;flex-direction: row;flex-wrap: wrap;}
+.guides .it {border-radius:12px;background:var(--c-gray-light);padding:15px 15px 60px;width:32%;position:relative;}
+.guides .it img {border-radius:8px;display:block;margin:0 0 10px;width: 100%;}
+.guides .it .btn {position:absolute;bottom:15px;left:15px;right:15px;}
+.guides .it .name {font-weight:bold;}
+@media (max-width: 992px) {
+    .guides {gap:15px 2%;}
+    .guides .it {width:48%;}
+}
+@media (max-width: 576px) {
+    .guides {gap:15px 0;flex-direction:column;}
+    .guides .it {width:100%;}
+}
