--- a/css/main.css
+++ b/css/main.css
@@ -250,7 +250,7 @@ main {flex: 1;}
 .packages-main-more {background:var(--c-gray-light);text-align:center;padding:30px 0;}
 
 .guides {display:flex;gap:15px 1.3%;flex-direction: row;flex-wrap: wrap;}
-.guides .it {border-radius:12px;background:var(--c-gray-light);padding:15px 15px 60px;width:32%;position:relative;}
+.guides .it {border-radius:12px;background:var(--c-gray-light);padding:15px 15px 70px;width:32%;position:relative;}
 .guides .it img {border-radius:8px;display:block;margin:0 0 10px;width: 100%;}
 .guides .it .btn {position:absolute;bottom:15px;left:15px;right:15px;}
 .guides .it .name {font-weight:bold;}
@@ -261,4 +261,21 @@ main {flex: 1;}
 @media (max-width: 576px) {
     .guides {gap:15px 0;flex-direction:column;}
     .guides .it {width:100%;}
+}
+
+.e-club {background:var(--c-gray-light);padding:30px 0;}
+.e-club .discount {color:var(--c-main);}
+
+.small-hotels {display:flex;gap:15px 1%;flex-direction: row;flex-wrap: wrap;}
+.small-hotels .it {border-radius:12px;background:var(--c-gray-light);padding:15px 15px 70px;width:24%;position:relative;}
+.small-hotels .it img {border-radius:8px;display:block;margin:0 0 10px;width: 100%;}
+.small-hotels .it .btn {position:absolute;bottom:15px;left:15px;right:15px;}
+.small-hotels .it .name {font-weight:bold;}
+@media (max-width: 992px) {
+    .small-hotels {gap:15px 2%;}
+    .small-hotels .it {width:48%;}
+}
+@media (max-width: 576px) {
+    .small-hotels {gap:15px 0;flex-direction:column;}
+    .small-hotels .it {width:100%;}
 }
