--- a/css/main.css
+++ b/css/main.css
@@ -118,7 +118,10 @@ img {max-width: 100%;}
 
 .wrapper-main {height:100%;display:flex;flex-direction:column;}
 header {background:var(--c-gray-light);margin:0 0 20px 0;}
-footer {}
+footer {background:var(--c-gray-light);font-size:16px;}
+footer ul, footer li {margin:0;padding:0;}
+footer li {margin:5px 0 0;}
+footer a {color:var(--c-text-main);}
 main {flex: 1;}
 
 .btn {border:1px solid transparent;border-radius:8px;padding:10px 15px;font-weight:400;}
