--- a/css/main.css
+++ b/css/main.css
@@ -123,6 +123,11 @@ footer ul, footer li {margin:0;padding:0;}
 footer li {margin:5px 0 0;}
 footer a {color:var(--c-text-main);}
 main {flex: 1;}
+@media (max-width: 576px) {
+    footer ul {margin:0 0 15px;}
+    footer li {display:inline-block;margin:2px 10px 0 0;}
+    .footer-logo {max-height:50px;}
+}
 
 .btn {border:1px solid transparent;border-radius:8px;padding:10px 15px;font-weight:400;}
 .btn:focus, .btn:active, .btn:active:focus {box-shadow:none;}
