--- a/css/main.css
+++ b/css/main.css
@@ -122,11 +122,12 @@ footer {background:var(--c-gray-light);font-size:16px;}
 footer ul, footer li {margin:0;padding:0;}
 footer li {margin:5px 0 0;}
 footer a {color:var(--c-text-main);}
+footer .footer-logo {max-height:88px;}
 main {flex: 1;}
 @media (max-width: 576px) {
     footer ul {margin:0 0 15px;}
     footer li {display:inline-block;margin:2px 10px 0 0;}
-    .footer-logo {max-height:50px;}
+    footer .footer-logo {max-height:50px;}
 }
 
 .btn {border:1px solid transparent;border-radius:8px;padding:10px 15px;font-weight:400;}
