--- a/css/main.css
+++ b/css/main.css
@@ -154,7 +154,7 @@ main {flex: 1;}
 
     .mb-dynamic {margin-bottom: 4rem;}
 
-    .logo {height:60px;}
+    .logo {max-height:60px;}
     .btn {border-radius:6px;padding:5px 10px;}
 }
 
@@ -170,8 +170,12 @@ main {flex: 1;}
 
     .mb-dynamic {margin-bottom: 3rem;}
 
-    .logo {height:60px;}
+    .logo {max-height:50px;}
     .btn {border-radius:6px;padding:5px 10px;}
+}
+
+@media (max-width: 576px) {
+    .logo {max-height:40px;}
 }
 
 @media (max-width: 1200px) {
@@ -186,6 +190,17 @@ main {flex: 1;}
 .menu-main li {display:inline-block;}
 .menu-main a {display:inline-block;padding:0 8px;font-weight:500;color:var(--c-text-main);}
 .menu-main a:hover {color:#666;}
+
+header .menu-up-control {display:none;color:var(--c-gray);font-size:21px;top:2px;position:relative;cursor:pointer;}
+header .menu-up-control.menu-up-control-is-close .icon-x {display:none;}
+header .menu-up-control.menu-up-control-is-open .icon-menu {display:none;}
+@media (max-width: 768px) {
+    header .menu-up-control {display:block;}
+    header.header-menu-is-open {position:fixed;top:0;bottom:0;left:0;right:0;z-index: 999;margin:0;}
+    header .menu-main {display:none;}
+    header .menu-main li {display:block;margin:0 0 10px;}
+    header.header-menu-is-open .menu-main {display:block;position:absolute;top:100px;left:20px;right:20px;z-index: 999;}
+}
 
 .main-block {width:100%;height:800px;position: relative;background:url('../img/branson-hospitality.jpg') 50% 50% no-repeat;background-size:cover;}
 .main-block:before {display:block;content:"";position:absolute;top:0;left:0;bottom:0;right:0;background: linear-gradient(180deg, rgba(0,0,0,0) 60%, rgba(0,0,0,1) 100%);}
