--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,8 @@ h6, .h6 {font:20px/1.3 Poppins, Arial, sans-serif;margin:0 0 0 0;padding:0;}
 label {font-weight: normal;color:var(--c-gray);}
 
 ul, li {margin:0;padding:0;}
-ul li {list-style:none;padding:0 0 0 17px;position:relative;}
+ul {padding:0 0 0 17px;}
+ul li {position:relative;}
 
 img {max-width: 100%;}
 
@@ -120,7 +121,7 @@ img {max-width: 100%;}
 header {background:var(--c-gray-light);margin:0 0 20px 0;}
 footer {background:var(--c-gray-light);font-size:16px;}
 footer ul, footer li {margin:0;padding:0;}
-footer li {margin:5px 0 0;}
+footer li {margin:5px 0 0;list-style:none;}
 footer a {color:var(--c-text-main);}
 footer .footer-logo {max-height:88px;}
 main {flex: 1;}
@@ -129,6 +130,8 @@ main {flex: 1;}
     footer li {display:inline-block;margin:2px 10px 0 0;}
     footer .footer-logo {max-height:50px;}
 }
+
+.green {color:var(--c-green);}
 
 .btn {border:1px solid transparent;border-radius:8px;padding:10px 15px;font-weight:400;}
 .btn:focus, .btn:active, .btn:active:focus {box-shadow:none;}
@@ -194,7 +197,7 @@ main {flex: 1;}
     .mb-dynamic {margin-bottom: 3rem;}
 }
 
-.hotel-main-slider .splide__arrow:before, .gallery .splide__arrow:before, .rooms .splide__arrow:before {
+.hotel-main-slider .splide__arrow:before, .gallery .splide__arrow:before, .splide-nav-up-right .splide__arrow:before {
     font-family: "mh" !important;
     font-style: normal !important;
     font-weight: normal !important;
@@ -314,6 +317,8 @@ header .menu-up-control.menu-up-control-is-open .icon-menu {display:none;}
 .e-club {background:var(--c-gray-light);padding:30px 0;}
 .e-club .discount {color:var(--c-main);}
 
+.join-e-club {background:var(--c-main);padding:30px 0;color:#fff;}
+
 .small-hotels {display:flex;gap:15px 1%;flex-direction: row;flex-wrap: wrap;}
 .small-hotels .it {border-radius:12px;background:var(--c-gray-light);padding:15px 15px 70px;width:24%;position:relative;}
 .small-hotels .it img {border-radius:8px;display:block;margin:0 0 10px;width: 100%;}
@@ -396,21 +401,43 @@ header .menu-up-control.menu-up-control-is-open .icon-menu {display:none;}
     .hotel-main-slider .img .container-data {padding:0;position:relative;}
 }
 
-.rooms .splide__arrow {opacity:1;top:-40px;background:var(--c-main);color:#fff;border-radius:4px;}
-.rooms .splide__arrow svg {display:none;}
-.rooms .splide__arrow:before {display:block;}
-.rooms .splide__arrow--prev {right:40px;left:auto;}
-.rooms .splide__arrow--prev:before {content:"a"}
-.rooms .splide__arrow--next {right:0;}
-.rooms .splide__arrow--next:before {content:"b"}
-.rooms ul.splide__list li {background:var(--c-gray-light);padding:20px;border-radius:12px;}
-.rooms ul.splide__list li img {opacity:0;height:174px;}
-.rooms ul.splide__list li .img {background:50% 50% no-repeat;background-size:cover;height:174px;border-radius:8px;margin:0 0 10px;}
-.rooms ul.splide__list li .name {font-weight: bold;font-size: 24px;margin:0 0 10px;}
-.rooms ul.splide__list li .description {margin:0 0 10px;}
-.rooms ul.splide__list li .guests .up-to {color:var(--c-green);font-weight: bold;}
+.splide-nav-up-right .splide__arrow {opacity:1;top:-40px;background:var(--c-main);color:#fff;border-radius:4px;}
+.splide-nav-up-right .splide__arrow svg {display:none;}
+.splide-nav-up-right .splide__arrow:before {display:block;}
+.splide-nav-up-right .splide__arrow--prev {right:45px;left:auto;}
+.splide-nav-up-right .splide__arrow--prev:before {content:"a"}
+.splide-nav-up-right .splide__arrow--next {right:0;}
+.splide-nav-up-right .splide__arrow--next:before {content:"b"}
+.general-slide ul.splide__list li {background:var(--c-gray-light);padding:20px;border-radius:12px;}
+.general-slide ul.splide__list li img {opacity:0;height:174px;}
+.general-slide ul.splide__list li .img {background:50% 50% no-repeat;background-size:cover;height:174px;border-radius:8px;margin:0 0 10px;}
+.general-slide ul.splide__list li .name {font-weight:500;font-size: 24px;margin:0 0 10px;}
+.general-slide ul.splide__list li .description {margin:0 0 10px;}
+.general-slide ul.splide__list li .guests .up-to {color:var(--c-green);font-weight: bold;}
 
 @media (max-width: 768px) {
-    .rooms .splide__arrow {top:-32px;border-radius:4px;width:30px;height:30px;}
-    .rooms .splide__arrow--prev {right:35px;}
+    .splide-nav-up-right .splide__arrow {top:-32px;border-radius:4px;width:30px;height:30px;}
+    .splide-nav-up-right .splide__arrow--prev {right:35px;}
 }
+
+.hotel-amenities-list .title {font-weight:600;color:var(--c-green);margin:0 0 15px;}
+.hotel-amenities-list ul {column-count:4;padding:0;}
+.hotel-amenities-list ul li {margin:0 0 5px;padding:0 20px 0 0;list-style:none;}
+
+@media (max-width: 992px) {
+    .hotel-amenities-list ul {column-count:3;}
+}
+@media (max-width: 768px) {
+    .hotel-amenities-list ul {column-count:2;}
+}
+@media (max-width: 576px) {
+    .hotel-amenities-list ul {column-count:1;}
+}
+
+.meeting-facilities {background:var(--c-gray-light);padding:30px 0;}
+
+.reviews-slide ul.splide__list li {background:var(--c-gray-light);padding:20px;border-radius:12px;}
+.reviews-slide .date {color:var(--c-gray);margin:0 0 10px;font-size:16px;}
+.reviews-slide .comment {margin:0 0 10px;}
+.reviews-slide .user {display:flex;align-items:center;}
+.reviews-slide .user img {margin-right:10px;}
