--- a/css/main.css
+++ b/css/main.css
@@ -478,3 +478,24 @@ header .menu-up-control.menu-up-control-is-open .icon-menu {display:none;}
     .our-mission .icon {font-size:25px;}
     .our-mission .title {display:inline;padding-left:15px;}
 }
+
+.nav-press-room {background: var(--c-gray-light);padding:15px 0;margin:0 0 30px;}
+.nav-press-room .nav {border:none;}
+.nav-press-room .nav-link {background:#fff;color:var(--c-main);border:none;border-radius:8px;margin:0 15px 0 0;}
+.nav-press-room .nav-link.active {background:var(--c-main);color:#fff;}
+
+.press-list {display:flex;flex-direction:row;flex-wrap:wrap;gap:20px 1.3%;}
+.press-list .it {background:var(--c-gray-light);border-radius:12px;height:270px;padding:20px;width:24%;display:flex;flex-direction:column;justify-content:space-between;}
+@media (max-width: 1320px) {
+    .press-list {gap:15px 1.3%;}
+    .press-list .it {width:32%;height:220px;}
+}
+@media (max-width: 992px) {
+    .press-list {gap:15px 2%;}
+    .press-list .it {width:49%;height:200px;}
+}
+@media (max-width: 576px) {
+    .nav-press-room {margin:0 0 10px;}
+    .press-list {gap:10px;}
+    .press-list .it {width:100%;height:auto;}
+}
