--- a/css/main.css
+++ b/css/main.css
@@ -526,3 +526,7 @@ header .menu-up-control.menu-up-control-is-open .icon-menu {display:none;}
     .blog .post {margin:0 0 30px;padding:30px 0 0;}
     .blog .post .post-description {margin:0;}
 }
+
+.navigation {color:#fff;}
+.navigation a {color:#fff;}
+.navigation .current {color:var(--c-gray);}
