--- a/css/main.css
+++ b/css/main.css
@@ -216,7 +216,7 @@ main {flex: 1;}
 .header-container {display:flex;justify-content:space-between;align-items:center;}
 .header-container {padding:10px 0;}
 .header-container div:nth-child(2) {flex:2;padding:0 20px;}
-.menu-main, .menu-main li, .menu-main ul {padding:0;margin:0;}
+.menu-main, .menu-main li, .menu-main ul {padding:0;margin:0;list-style:none;}
 .menu-main {text-align:center;position:relative;z-index:100;}
 .menu-main > li {display:inline-block;position:relative;z-index:101;}
 .menu-main a {display:inline-block;padding:0 8px;font-weight:500;color:var(--c-text-main);}
