--- a/css/main.css
+++ b/css/main.css
@@ -46,9 +46,9 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {-webkit-appe
 /* Firefox */
 input[type=number] {-moz-appearance: textfield;}
 
-h1, h2.h1, .h1 {font:72px/1.2 Poppins, Arial, sans-serif;margin:0 0 15px 0;padding:0;}
-h2, h1.h2, .h2 {font:48px/1.2 Poppins, Arial, sans-serif;margin:0 0 15px 0;padding:0;}
-h3, .h3 {font:32px/1.3 Poppins, Arial, sans-serif;margin:0 0 10px 0;padding:0;}
+h1, h2.h1, .h1 {font:bold 72px/1.2 Poppins, Arial, sans-serif;margin:0 0 15px 0;padding:0;}
+h2, h1.h2, .h2 {font:bold 48px/1.2 Poppins, Arial, sans-serif;margin:0 0 15px 0;padding:0;}
+h3, .h3 {font:bold 32px/1.3 Poppins, Arial, sans-serif;margin:0 0 10px 0;padding:0;}
 h4, .h4 {font:28px/1.3 Poppins, Arial, sans-serif;margin:0 0 0 0;padding:0;}
 h5, .h5 {font:23px/1.3 Poppins, Arial, sans-serif;margin:0 0 0 0;padding:0;}
 h6, .h6 {font:20px/1.3 Poppins, Arial, sans-serif;margin:0 0 0 0;padding:0;}
@@ -58,8 +58,16 @@ label {font-weight: normal;color:var(--c-gray);}
 ul, li {margin:0;padding:0;}
 ul {padding:0 0 0 17px;}
 ul li {position:relative;}
+ul.style {padding:0 0 0 27px;}
+ul.style li {list-style:none;}
+ul.style li:before {position:absolute;left:-25px;top:3px;display:inline-block;content:"m";color:var(--c-green);margin:0 10px 0 0;}
 
 img {max-width: 100%;}
+
+table.style {border-radius:4px;overflow:hidden;}
+table.style th, table.style td {text-align:center;border:2px solid #fff;padding:5px 10px;font-weight:bold;}
+table.style th {background:var(--c-main);color:#fff;}
+table.style td {background:var(--c-gray-light);color:var(--c-main);}
 
 .cursor-pointer {cursor:pointer;}
 
@@ -152,6 +160,8 @@ main {flex: 1;}
 .tag-white {background:#fff;}
 
 .img-border {border-radius:8px;}
+.border-radius {border-radius:8px;overflow:hidden;}
+.border-radius .in {margin:-2px;}
 
 @media (max-width: 1600px) {
     html, body, td, th {font-size:16px;}
@@ -204,7 +214,8 @@ main {flex: 1;}
     .mb-dynamic {margin-bottom: 3rem;}
 }
 
-.hotel-main-slider .splide__arrow:before, .gallery .splide__arrow:before, .splide-nav-up-right .splide__arrow:before {
+.hotel-main-slider .splide__arrow:before, .gallery .splide__arrow:before, .splide-nav-up-right .splide__arrow:before,
+ul.style li:before {
     font-family: "mh" !important;
     font-style: normal !important;
     font-weight: normal !important;
@@ -406,6 +417,7 @@ header .menu-up-control.menu-up-control-is-open .icon-menu {display:none;}
 .gallery .splide__arrow--prev {left:auto;right:55px;}
 .gallery li {padding:0;margin:0;}
 .gallery .img {width:100%;height:690px;position: relative;background:50% 50% no-repeat;background-size:cover;}
+.gallery-small .img {height:490px;}
 .gallery .img:before {display:block;content:"";position:absolute;top:0;left:0;bottom:0;right:0;background: linear-gradient(180deg, rgba(0,0,0,0) 60%, rgba(0,0,0,1) 100%);}
 .gallery .img .container-data {position:absolute;z-index:10;top:0;left:0;bottom:0;right:0;display:flex;align-items:flex-end;padding:0 0 50px;}
 .gallery .img .container-data > img {display:none;}
@@ -559,3 +571,5 @@ header .menu-up-control.menu-up-control-is-open .icon-menu {display:none;}
 @media (max-width: 576px) {
     .adventure .it {width:100%;}
 }
+
+.lake-list {background:var(--c-gray-light);border-radius:8px;padding:20px;}
