--- a/fonts/mh/styles.css
+++ b/fonts/mh/styles.css
@@ -77,3 +77,36 @@
 .icon-check:before {
   content: "\6d";
 }
+.icon-award-trophy:before {
+  content: "\6e";
+}
+.icon-construction:before {
+  content: "\6f";
+}
+.icon-countertop:before {
+  content: "\70";
+}
+.icon-door-open-rounded:before {
+  content: "\71";
+}
+.icon-family-room:before {
+  content: "\72";
+}
+.icon-food-24:before {
+  content: "\73";
+}
+.icon-hair-dryer:before {
+  content: "\74";
+}
+.icon-luggage:before {
+  content: "\75";
+}
+.icon-parking:before {
+  content: "\76";
+}
+.icon-refrigerator:before {
+  content: "\77";
+}
+.icon-round-room-service:before {
+  content: "\78";
+}
